Fix `ProgressBar` gap

--- a/src/components/SkillsCard.module.css
+++ b/src/components/SkillsCard.module.css
@@ -242,8 +242,6 @@ p {
     font-weight: 700;
     font-size: 20px;
     line-height: 100%;
-    /*white-space: nowrap;*/
-    /* identical to box height, or 20px */
 
     display: flex;
     align-items: center;
@@ -338,6 +336,10 @@ p {
     .progressCardImageContainer {
         width: 75px;
         height: 75px;
+    }
+
+    .progressCardProgressBar {
+        gap: 10px;
     }
 
     .progressCardProgressBarGraphics {
